upgraded to jdk17, tests not working